--- a/view/css/project/edit/rewards.css
+++ b/view/css/project/edit/rewards.css
@@ -1,175 +1,268 @@
 
 /**
- * Costs 
+ * Rewards
  */
  
-body.project-edit div#main.rewards div.superform li.element.rewards div.children li.element .title {
-    padding: .3em 0;
-    position: absolute;
-    left: 0;
-    top: 1em;
+body.project-edit div#main.rewards div.superform li.element.reward-new > .title {
+    display: none;
 }
 
-body.project-edit div#main.rewards div.superform li.element.rewards div.children li.element .contents {    
-    margin-left: 25%;
-    position: relative;
+/* Viendo */
+
+body.project-edit div#main.rewards div.superform li.element.reward div.title {
+    font-size: 14px;
+    text-transform: uppercase;
+    width: 70%;
+    float: left;
+}
+
+body.project-edit div#main.rewards div.superform li.element.reward div.reward {
+    padding-left: 55px;
+    background: none no-repeat 10px center;
+    min-height: 32px;
+}
+
+body.project-edit div#main.rewards div.superform li.element.reward div.file {
+    background-image: url('../../icon/m/file.png');
+}
+
+body.project-edit div#main.rewards div.superform li.element.reward div.money {
+    background-image: url('../../icon/m/money.png');
+}
+
+body.project-edit div#main.rewards div.superform li.element.reward div.code {
+    background-image: url('../../icon/m/code.png');
+}
+
+body.project-edit div#main.rewards div.superform li.element.reward div.service {
+    background-image: url('../../icon/m/service.png');
+}
+
+body.project-edit div#main.rewards div.superform li.element.reward div.manual {
+    background-image: url('../../icon/m/manual.png');
+}
+
+body.project-edit div#main.rewards div.superform li.element.reward div.product {
+    background-image: url('../../icon/m/product.png');
+}
+
+body.project-edit div#main.rewards div.superform li.element.reward div.design {
+    background-image: url('../../icon/m/design.png');
+}
+
+body.project-edit div#main.rewards div.superform li.element.reward div.other {
+    background-image: url('../../icon/m/other.png');
+}
+
+body.project-edit div#main.rewards div.superform li.element.reward div.description {
+    float: left;
+    width: 70%;
+    margin: .5em 0;
+}
+
+body.project-edit div#main.rewards div.superform li.element.reward input.edit,
+body.project-edit div#main.rewards div.superform li.element.reward input.remove {
+    float: right;
+    clear: right;
+    width: 7em;
+}
+
+body.project-edit div#main.rewards div.superform li.element.reward input.edit {
+    margin-top: -1em;
+}
+
+body.project-edit div#main.rewards div.superform li.element.reward input.remove {
+    margin-bottom: 1em;
     margin-top: 0;
 }
 
-body.project-edit div#main.rewards div.superform li.element.individual_reward li.element.reward-remove {
-    float: right;
-    margin-top: -4.5em !important;    
+/* Editando */
+
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward > .children  ol,
+body.project-edit div#main.rewards div.superform li.element.editindividual_reward > .children  ol {
+    padding: 0 !important;
+    margin: 0 !important;
+}
+
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward li.buttons div.contents,
+body.project-edit div#main.rewards div.superform li.element.editindividual_reward li.buttons ol,
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward li.buttons div.contents,
+body.project-edit div#main.rewards div.superform li.element.editindividual_reward li.buttons ol {
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward li.buttons li,
+body.project-edit div#main.rewards div.superform li.element.editindividual_reward li.buttons li {
+    display: inline-block;
     padding: 0;
+    margin: 0;
 }
 
-body.project-edit div#main.rewards div.superform li.element.social_reward li.element.reward-remove > * {
-    text-align: right;
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward li.buttons input,
+body.project-edit div#main.rewards div.superform li.element.editindividual_reward li.buttons input {
+    width: auto;
+    float: left;
+    margin: 0 10px 0 0;
 }
 
-body.project-edit div#main.rewards div.superform li.element.reward-add .contents {
-    margin-left: 0 !important;
+
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-description textarea,
+body.project-edit div#main.rewards div.superform li.element.editindividual_reward div.children li.element.reward-description textarea {
+    height: 4em;
+    min-height: 4em;
 }
 
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-type li > label {
-    padding-left: 55px;        
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-type li > label,
+body.project-edit div#main.rewards div.superform li.element.editindividual_reward div.children li.element.reward-type li > label {
+    padding-left: 55px;
     background: none no-repeat 10px center;
     min-height: 32px;
     line-height: 32px;
 }
 
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-type li.reward_file > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-type li.reward_file > label,º
+body.project-edit div#main.rewards div.superform li.element.editindividual_reward div.children li.element.reward-type li.reward_file > label {
     background-image: url('../../icon/m/file.png');
 }
 
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-type li.reward_money > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-type li.reward_money > label,
+body.project-edit div#main.rewards div.superform li.element.editindividual_reward div.children li.element.reward-type li.reward_money > label {
     background-image: url('../../icon/m/money.png');
 }
 
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-type li.reward_code > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-type li.reward_code > label,
+body.project-edit div#main.rewards div.superform li.element.editindividual_reward div.children li.element.reward-type li.reward_code > label {
     background-image: url('../../icon/m/code.png');
 }
 
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-type li.reward_service > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-type li.reward_service > label,
+body.project-edit div#main.rewards div.superform li.element.editindividual_reward div.children li.element.reward-type li.reward_service > label {
     background-image: url('../../icon/m/service.png');
 }
 
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-type li.reward_manual > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-type li.reward_manual > label,
+body.project-edit div#main.rewards div.superform li.element.editindividual_reward div.children li.element.reward-type li.reward_manual > label {
     background-image: url('../../icon/m/manual.png');
 }
 
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-type li.reward_product > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-type li.reward_product > label,
+body.project-edit div#main.rewards div.superform li.element.editindividual_reward div.children li.element.reward-type li.reward_product > label {
     background-image: url('../../icon/m/product.png');
 }
 
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-type li.reward_design > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-type li.reward_design > label,
+body.project-edit div#main.rewards div.superform li.element.editindividual_reward div.children li.element.reward-type li.reward_design > label {
     background-image: url('../../icon/m/design.png');
 }
 
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-type li.reward_other > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-type li.reward_other > label,
+body.project-edit div#main.rewards div.superform li.element.editindividual_reward div.children li.element.reward-type li.reward_other > label {
     background-image: url('../../icon/m/other.png');
 }
 
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li > label {
+/* Licencias */
+
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-license li > label {
     padding-left: 100px;
     background: none no-repeat 10px center;
     min-height: 32px;
     line-height: 32px;
 }
 
-/* Licencias */
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_agpl > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-license li.license_agpl > label {
     background-image: url('/view/css/license/agpl.png');
 }
 
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_apache > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-license li.license_apache > label {
     background-image: url('/view/css/license/apache.png');
 }
 
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_balloon > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-license li.license_balloon > label {
     background-image: url('/view/css/license/balloon.png');
 }
 
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_bsd > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-license li.license_bsd > label {
     background-image: url('/view/css/license/bsd.png');
 }
 
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_cc0 > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-license li.license_cc0 > label {
     background-image: url('/view/css/license/cc0.png');
 }
 
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_ccby > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-license li.license_ccby > label {
     background-image: url('/view/css/license/ccby.png');
 }
 
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_ccbync > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-license li.license_ccbync > label {
     background-image: url('/view/css/license/ccbync.png');
 }
 
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_ccbyncnd > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-license li.license_ccbyncnd > label {
     background-image: url('/view/css/license/ccbyncnd.png');
 }
 
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_ccbyncsa > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-license li.license_ccbyncsa > label {
     background-image: url('/view/css/license/ccbyncsa.png');
 }
 
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_ccbynd > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-license li.license_ccbynd > label {
     background-image: url('/view/css/license/ccbynd.png');
 }
 
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_ccbysa > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-license li.license_ccbysa > label {
     background-image: url('/view/css/license/ccbysa.png');
 }
 
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_fal > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-license li.license_fal > label {
     background-image: url('/view/css/license/fal.png');
 }
 
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_fdl > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-license li.license_fdl > label {
     background-image: url('/view/css/license/fdl.png');
 }
 
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_freebsd > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-license li.license_freebsd > label {
     background-image: url('/view/css/license/freebsd.png');
 }
 
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_gpl > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-license li.license_gpl > label {
     background-image: url('/view/css/license/gpl.png');
 }
 
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_lgpl > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-license li.license_lgpl > label {
     background-image: url('/view/css/license/lgpl.png');
 }
 
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_mit > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-license li.license_mit > label {
     background-image: url('/view/css/license/mit.png');
 }
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_mpl > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-license li.license_mpl > label {
     background-image: url('/view/css/license/mpl.png');
 }
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_odbl > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-license li.license_odbl > label {
     background-image: url('/view/css/license/odbl.png');
 }
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_odcby > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-license li.license_odcby > label {
     background-image: url('/view/css/license/odcby.png');
 }
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_oshw > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-license li.license_oshw > label {
     background-image: url('/view/css/license/oshw.png');
 }
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_pd > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-license li.license_pd > label {
     background-image: url('/view/css/license/pd.png');
 }
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_php > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-license li.license_php > label {
     background-image: url('/view/css/license/php.png');
 }
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_tapr > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-license li.license_tapr > label {
     background-image: url('/view/css/license/tapr.png');
 }
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-license li.license_xoln > label {
+body.project-edit div#main.rewards div.superform li.element.editsocial_reward div.children li.element.reward-license li.license_xoln > label {
     background-image: url('/view/css/license/xoln.png');
 }/* Fin licencias */
 
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-amount > div.contents > input {
+body.project-edit div#main.rewards div.superform li.element.editindividual_reward div.children li.element.reward-amount > div.contents > input {
     width: 3em;
     max-width: 3em;
     min-width: 3em;
@@ -181,7 +274,7 @@ body.project-edit div#main.rewards div.superform li.element.reward div.children 
     font-weight: bold;
 }
 
-body.project-edit div#main.rewards div.superform li.element.reward div.children li.element.reward-units > div.contents > input {
+body.project-edit div#main.rewards div.superform li.element.editindividual_reward div.children li.element.reward-units > div.contents > input {
     width: 4.6em;
     max-width: 4.6em;
     min-width: 4.6em;
