--- a/view/css/project/view.css
+++ b/view/css/project/view.css
@@ -29,7 +29,7 @@ body.project-show div#sub-header {
 }
 
 body.project-show div#sub-header div.project-header{
-    min-height: 70px;
+    min-height: 50px;
 }
 
 body.project-show div#sub-header img{
@@ -153,6 +153,7 @@ body.project-show div#main div.widget.project-support {
 body.project-show div#main div.widget.project-support,
 body.project-show div#main div.widget.project-rewards,
 body.project-show div#main div.widget.project-collaborations,
+body.project-show div#main div.widget.project-investors,
 body.project-show div#main div.widget.user {
     width: 260px;
     float: right;
@@ -166,6 +167,9 @@ body.project-show div#main div.widget.project-needs,
 body.project-show div#main div.widget.project-messages,
 body.project-show div#main div.widget.project-message,
 body.project-show div#main div.widget.project-supporters,
+body.project-show div#main div.widget.project-invest,
+body.project-show div#main div.widget.invest-message,
+body.project-show div#main div.widget.worthcracy,
 body.project-show div#main div.widget.worthcracy-legend {
     max-width: 580px;
     margin-right: 20px;
