--- a/view/css/project/widget/rewards.css
+++ b/view/css/project/widget/rewards.css
@@ -1,23 +1,43 @@
+/* Estos estilos son para:
+La pagina de aportar, la pagina de retornos, el lateral de retornos
+*/
+div.widget.project-invest div.social h4.title,
+div.widget.project-rewards div.social h4.title,
+#rewards-summary div.social h4.title {
+    color: #28b258 !important;
+}
+
+div.widget.project-invest > div.social ul li,
 div.widget.project-rewards > div.social ul li,
 #rewards-summary > div.social ul li {
     background-color: #f3f9f2;
 }
 
+div.widget.project-invest > div.social ul li.active,
 div.widget.project-rewards > div.social ul li.active,
 #rewards-summary > div.social ul li.active {
     background-color: #d5ebd7;
 }
 
+div.widget.project-invest div.individual h4.title,
+div.widget.project-rewards div.individual h4.title,
+#rewards-summary div.individual h4.title {
+    color: #ee4245 !important;
+}
+
+div.widget.project-invest > div.individual ul li,
 div.widget.project-rewards > div.individual ul li,
 #rewards-summary > div.individual ul li{
     background-color: #f8e3e3;
 }
 
+div.widget.project-invest > div.individual ul li.active,
 div.widget.project-rewards > div.individual ul li.active,
 #rewards-summary > div.individual ul li.active {
     background-color: #f5c7c8;
 }
 
+div.widget.project-invest > div.individual ul li span.name,
 div.widget.project-rewards > div.individual ul li span.name,
 #rewards-summary > div.individual ul li span.name{
     margin: 0 0 .4em;
@@ -75,6 +95,7 @@ div.widget.project-rewards > div.individual ul li span.left,
     font-weight: bold;
 }
 
+div.widget.project-invest ul,
 div.widget.project-rewards ul,
 #rewards-summary ul {
     margin: 1em 0;
@@ -82,6 +103,7 @@ div.widget.project-rewards ul,
     list-style: none;
 }
 
+div.widget.project-invest ul li,
 div.widget.project-rewards ul li,
 #rewards-summary ul li {
     padding: 10px 10px 10px 65px;
@@ -90,11 +112,13 @@ div.widget.project-rewards ul li,
     margin-bottom: 1em;
 }
 
+div.widget.project-invest ul li > p,
 div.widget.project-rewards ul li > p,
 #rewards-summary ul li > p {
     margin:  0 0 1em;
 }
 
+div.widget.project-invest ul li > .name,
 div.widget.project-rewards ul li > .name,
 #rewards-summary ul li > .name {
     margin: 0 0 .4em;
@@ -104,41 +128,49 @@ div.widget.project-rewards ul li > .name,
 }
 
 
+div.widget.project-invest ul li.file,
 div.widget.project-rewards ul li.file,
 #rewards-summary ul li.file{
     background-image: url('../../icon/m/file.png');
 }
 
+div.widget.project-invest ul li.money,
 div.widget.project-rewards ul li.money,
 #rewards-summary ul li.money {
     background-image: url('../../icon/m/money.png');
 }
 
+div.widget.project-invest ul li.code,
 div.widget.project-rewards ul li.code,
 #rewards-summary ul li.code {
     background-image: url('../../icon/m/code.png');
 }
 
+div.widget.project-invest ul li.service,
 div.widget.project-rewards ul li.service,
 #rewards-summary ul li.service {
     background-image: url('../../icon/m/service.png');
 }
 
+div.widget.project-invest ul li.manual,
 div.widget.project-rewards ul li.manual,
 #rewards-summary ul li.manual {
     background-image: url('../../icon/m/manual.png');
 }
 
+div.widget.project-invest ul li.product,
 div.widget.project-rewards ul li.product,
 #rewards-summary ul li.product {
     background-image: url('../../icon/m/product.png');
 }
 
+div.widget.project-invest ul li.design,
 div.widget.project-rewards ul li.design,
 #rewards-summary ul li.design {
     background-image: url('../../icon/m/design.png');
 }
 
+div.widget.project-invest ul li.other,
 div.widget.project-rewards ul li.other,
 #rewards-summary ul li.other {
     background-image: url('../../icon/m/other.png');
@@ -150,6 +182,11 @@ div.widget.project-rewards > a.more {
     text-decoration: none;
 }
 
+div.widget.project-invest ul li div.license h4,
+div.widget.project-invest ul li div.license h5,
+div.widget.project-invest ul li div.license h6,
+div.widget.project-invest ul li div.license h7,
+div.widget.project-invest ul li div.license h8,
 div.widget.project-rewards ul li div.license h4,
 div.widget.project-rewards ul li div.license h5,
 div.widget.project-rewards ul li div.license h6,
@@ -168,11 +205,13 @@ div.widget.project-rewards ul li div.license h8,
     padding: 0 0 .2em;
 }
 
+div.widget.project-invest ul li div.license a,
 div.widget.project-rewards ul li div.license a,
 #rewards-summary ul li div.license a {
     text-decoration: none;
 }
 
+div.widget.project-invest ul li div.license > a strong,
 div.widget.project-rewards ul li div.license > a strong,
 #rewards-summary ul li div.license > a strong {
     background: url("/view/css/license/license.png") no-repeat left top;
@@ -181,128 +220,155 @@ div.widget.project-rewards ul li div.license > a strong,
 }
 
 
+div.widget.project-invest ul li div.license,
 div.widget.project-rewards ul li div.license,
 #rewards-summary ul li div.license {
     font-size: 11px;
 }
 
+div.widget.project-invest ul li div.license  p,
 div.widget.project-rewards ul li div.license  p,
 #rewards-summary ul li div.license  p {
     margin: .2em 0;
 }
 
+div.widget.project-invest ul li div.license.agpl > a strong,
 div.widget.project-rewards ul li div.license.agpl > a strong,
 #rewards-summary ul li div.license.agpl > a strong {
     background-image: url('/view/css/license/agpl.png');
 }
 
+div.widget.project-invest ul li div.license.apache > a strong,
 div.widget.project-rewards ul li div.license.apache > a strong,
 #rewards-summary ul li div.license.apache > a strong {
     background-image: url('/view/css/license/apache.png');
 }
 
+div.widget.project-invest ul li div.license.balloon > a strong,
 div.widget.project-rewards ul li div.license.balloon > a strong,
 #rewards-summary ul li div.license.balloon > a strong {
     background-image: url('/view/css/license/balloon.png');
 }
 
+div.widget.project-invest ul li div.license.bsd > a strong,
 div.widget.project-rewards ul li div.license.bsd > a strong,
 #rewards-summary ul li div.license.bsd > a strong {
     background-image: url('/view/css/license/bsd.png');
 }
 
+div.widget.project-invest ul li div.license.cc0 > a strong,
 div.widget.project-rewards ul li div.license.cc0 > a strong,
 #rewards-summary ul li div.license.cc0 > a strong {
     background-image: url('/view/css/license/cc0.png');
 }
 
+div.widget.project-invest ul li div.license.ccby > a strong,
 div.widget.project-rewards ul li div.license.ccby > a strong,
 #rewards-summary ul li div.license.ccby > a strong {
     background-image: url('/view/css/license/ccby.png');
 }
 
+div.widget.project-invest ul li div.license.ccbync > a strong,
 div.widget.project-rewards ul li div.license.ccbync > a strong,
 #rewards-summary ul li div.license.ccbync > a strong {
     background-image: url('/view/css/license/ccbync.png');
 }
 
+div.widget.project-invest ul li div.license.ccbyncnd > a strong,
 div.widget.project-rewards ul li div.license.ccbyncnd > a strong,
 #rewards-summary ul li div.license.ccbyncnd > a strong {
     background-image: url('/view/css/license/ccbyncnd.png');
 }
 
+div.widget.project-invest ul li div.license.ccbyncsa > a strong,
 div.widget.project-rewards ul li div.license.ccbyncsa > a strong,
 #rewards-summary ul li div.license.ccbyncsa > a strong {
     background-image: url('/view/css/license/ccbyncsa.png');
 }
 
+div.widget.project-invest ul li div.license.ccbynd > a strong,
 div.widget.project-rewards ul li div.license.ccbynd > a strong,
 #rewards-summary ul li div.license.ccbynd > a strong {
     background-image: url('/view/css/license/ccbynd.png');
 }
 
+div.widget.project-invest ul li div.license.ccbysa > a strong,
 div.widget.project-rewards ul li div.license.ccbysa > a strong,
 #rewards-summary ul li div.license.ccbysa > a strong {
     background-image: url('/view/css/license/ccbysa.png');
 }
 
+div.widget.project-invest ul li div.license.fal > a strong,
 div.widget.project-rewards ul li div.license.fal > a strong,
 #rewards-summary ul li div.license.fal > a strong {
     background-image: url('/view/css/license/fal.png');
 }
 
+div.widget.project-invest ul li div.license.fdl > a strong,
 div.widget.project-rewards ul li div.license.fdl > a strong,
 #rewards-summary ul li div.license.fdl > a strong {
     background-image: url('/view/css/license/fdl.png');
 }
 
+div.widget.project-invest ul li div.license.freebsd > a strong,
 div.widget.project-rewards ul li div.license.freebsd > a strong,
 #rewards-summary ul li div.license.freebsd > a strong {
     background-image: url('/view/css/license/freebsd.png');
 }
 
+div.widget.project-invest ul li div.license.gpl > a strong,
 div.widget.project-rewards ul li div.license.gpl > a strong,
 #rewards-summary ul li div.license.gpl > a strong {
     background-image: url('/view/css/license/gpl.png');
 }
 
+div.widget.project-invest ul li div.license.lgpl > a strong,
 div.widget.project-rewards ul li div.license.lgpl > a strong,
 #rewards-summary ul li div.license.lgpl > a strong {
     background-image: url('/view/css/license/lgpl.png');
 }
 
+div.widget.project-invest ul li div.license.mit > a strong,
 div.widget.project-rewards ul li div.license.mit > a strong,
 #rewards-summary ul li div.license.mit > a strong {
     background-image: url('/view/css/license/mit.png');
 }
+div.widget.project-invest ul li div.license.mpl > a strong,
 div.widget.project-rewards ul li div.license.mpl > a strong,
 #rewards-summary ul li div.license.mpl > a strong {
     background-image: url('/view/css/license/mpl.png');
 }
+div.widget.project-invest ul li div.license.odbl > a strong,
 div.widget.project-rewards ul li div.license.odbl > a strong,
 #rewards-summary ul li div.license.odbl > a strong {
     background-image: url('/view/css/license/odbl.png');
 }
+div.widget.project-invest ul li div.license.odcby > a strong,
 div.widget.project-rewards ul li div.license.odcby > a strong,
 #rewards-summary ul li div.license.odcby > a strong {
     background-image: url('/view/css/license/odcby.png');
 }
+div.widget.project-invest ul li div.license.oshw > a strong,
 div.widget.project-rewards ul li div.license.oshw > a strong,
 #rewards-summary ul li div.license.oshw > a strong {
     background-image: url('/view/css/license/oshw.png');
 }
+div.widget.project-invest ul li div.license.pd > a strong,
 div.widget.project-rewards ul li div.license.pd > a strong,
 #rewards-summary ul li div.license.pd > a strong {
     background-image: url('/view/css/license/pd.png');
 }
+div.widget.project-invest ul li div.license.php > a strong,
 div.widget.project-rewards ul li div.license.php > a strong,
 #rewards-summary ul li div.license.php > a strong {
     background-image: url('/view/css/license/php.png');
 }
+div.widget.project-invest ul li div.license.tapr > a strong,
 div.widget.project-rewards ul li div.license.tapr > a strong,
 #rewards-summary ul li div.license.tapr > a strong {
     background-image: url('/view/css/license/tapr.png');
 }
+div.widget.project-invest ul li div.license.xoln > a strong,
 div.widget.project-rewards ul li div.license.xoln > a strong,
 #rewards-summary ul li div.license.xoln > a strong {
     background-image: url('/view/css/license/xoln.png');
