--- a/view/css/project/edit/steps.css
+++ b/view/css/project/edit/steps.css
@@ -100,7 +100,7 @@ body.project-edit div#main #project-steps span.step.error.active > button {
 }
 
 /* Errors badge */
-body.project-edit div#main #project-steps span.step.error > button > strong.errors {
+body.project-edit div#main #project-steps span.step > button > strong.number {
     width: 100%;
     height: 45px;
     line-height: 45px;
@@ -113,10 +113,12 @@ body.project-edit div#main #project-steps span.step.error > button > strong.erro
     text-align: center;
 }
 
-body.project-edit div#main #project-steps span.step.error.active > button > strong.errors {
+body.project-edit div#main #project-steps span.step.active > button > strong.number {
     font-size: 18px;
     font-weight: bold;
 }
+
+
 
 /* Project fieldset */
 
